methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: '(' expected but '{' found.
  } else if {
            ^SlugTracking:12: error: illegal start of simple expression
} 
^